@@ -1,8 +1,8 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
-anytime_cpp <- function(x, tz = "UTC", asUTC = FALSE) {
-    .Call('anytime_anytime_cpp', PACKAGE = 'anytime', x, tz, asUTC)
+anytime_cpp <- function(x, tz = "UTC", asUTC = FALSE, asDate = FALSE) {
+    .Call('anytime_anytime_cpp', PACKAGE = 'anytime', x, tz, asUTC, asDate)
 }
 
 #' The time and date parsing and conversion relies on trying a (given
